Bug 260884 - filter subject and move to folder not working
Summary: filter subject and move to folder not working
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Windows CE Microsoft Windows CE
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-21 14:52 UTC by Ludwig Reiter
Modified: 2011-01-19 15:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ludwig Reiter 2010-12-21 14:52:50 UTC
Version:           unspecified (using Devel) 
OS:                Windows CE

version: 20101219 svn 1207720

Reproducible: Always

Steps to Reproduce:
1. Create a filter: Move mails with specific word (e.g. "spam") in subject to a subfolder of the inbox.
2. Send a mail with the word to the account.

Actual Results:  
The mail stays in the inbox.

Expected Results:  
The mail should be in the subfolder.
Comment 1 Tobias Koenig 2010-12-21 16:21:10 UTC
SVN commit 1208423 by tokoe:

Do not add empty search rules to the search rule list.

These empty rules caused new filters not to match until
the application has been restarted and the empty filters been
removed by the write/read to/from configuration file.

BUG: 260884


 M  +1 -1      searchpatternedit.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1208423
Comment 2 Ludwig Reiter 2011-01-19 15:55:13 UTC
Windows CE Mail Touch 2011-01-16 git-4d1bc61
test of the description: passed
Closed.