Do not add empty search rules to the search rule list.

These empty rules caused new filters not to match until
the application has been restarted and the empty filters been
removed by the write/read to/from configuration file.

BUG: 260884

svn path=/trunk/KDE/kdepim/; revision=1208423